test/files/neg/t5455.check
t5455.scala:4: error: lazy vals are not tailcall transformed
  @annotation.tailrec final lazy val bar: Thing[Int] = {
                                     ^
1 error
